--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -13,3 +13,11 @@
   website: https://ghost.org/
   location: San Francisco
   profile_image: img/alex-knight-326705-unsplash.jpg
+- id: Bayu Setiawan
+  avatar: avatars/ghost.png
+  bio: Junior frontend web developer and full-time weeb
+  twitter: MirrorBottle
+  facebook: MirrorBottle
+  website: https://bayusetiawan.netlify.app
+  location: Samarinda, Indonesia
+  profile_image: img/alex-knight-326705-unsplash.jpg
