--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "gatsby-plugin-offline": "^3.8.0",
     "gatsby-plugin-postcss": "3.5.0",
     "gatsby-plugin-react-helmet": "3.8.0",
+    "gatsby-plugin-robots-txt": "^1.5.5",
     "gatsby-plugin-sharp": "2.12.0",
-    "gatsby-plugin-sitemap": "2.10.0",
+    "gatsby-plugin-sitemap": "^2.10.0",
     "gatsby-plugin-typescript": "2.10.0",
     "gatsby-remark-abbr": "2.0.0",
     "gatsby-remark-copy-linked-files": "2.8.0",
