--- a/src/content/tag.yaml
+++ b/src/content/tag.yaml
@@ -18,7 +18,7 @@
   image: img/tags/slice-of-life.jpg
 - id: psychological
   description: Di balik gumpalan daging milikmu, terdapat jiwa yang rapuh. Berhati-hatilah.
-  image: img/tags/depressed.jpg
+  image: img/tags/deppresed.jpg
 - id: blog
   description: Terkadang, aku ingin menulis sesuatu yang berbeda.
   image: img/tags/blog.jpg
