--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "11.0.0",
     "cssnano": "4.1.10",
     "date-fns": "2.16.1",
+    "disqus-react": "^1.0.10",
     "emotion": "11.0.0",
     "emotion-server": "11.0.0",
     "gatsby": "2.30.0",
